object calling test

--- a/04_data/index.html
+++ b/04_data/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<script src="code/journal.js"></script>
-<script src="code/chapter/04_data.js"></script>
+<script src="./code/journal.js"></script>
+<script src="./code/chapter/04_data.js"></script>
+<script src="./test.js"></script>
 
 <body><script>
 for (let event of journalEvents(JOURNAL)) {
